--- a/css/_toolbars.scss
+++ b/css/_toolbars.scss
@@ -1,6 +1,7 @@
 /**
  * Round badge.
  */
+
 .badge-round {
     background-color: #165ECC;
     border-radius: 50%;
@@ -19,9 +20,11 @@
     vertical-align: middle;
 }
 
+
 /**
  * TODO: when the old filmstrip has been removed, remove the "new-" prefix.
  */
+
 .new-toolbox {
     bottom: calc((#{$newToolbarSize} * 2) * -1);
     left: 0;
@@ -29,21 +32,18 @@
     right: 0;
     transition: bottom .3s ease-in;
     width: 100%;
+    visibility: hidden;
     pointer-events: none;
     z-index: $toolbarZ + 2;
-
     &.shift-up {
         bottom: calc(((#{$newToolbarSize} + 30px) * 2) * -1);
-
         .toolbox-content {
             margin-bottom: 46px;
         }
     }
-
     &.visible {
         bottom: 0;
     }
-
     &.no-buttons {
         display: none;
     }
@@ -57,7 +57,6 @@
     position: relative;
     z-index: $toolbarZ;
     pointer-events: none;
-
     .toolbox-button-wth-dialog {
         display: inline-block;
     }
@@ -66,7 +65,6 @@
 .toolbar-button-with-badge {
     display: inline-block;
     position: relative;
-
     .badge-round {
         bottom: -5px;
         font-size: 12px;
@@ -85,7 +83,6 @@
     max-width: 100%;
     pointer-events: all;
     border-radius: 6px;
-
     .toolbox-content-items {
         @include ltr;
     }
@@ -105,17 +102,14 @@
 
 div.hangup-button {
     background-color: #CB2233;
-
     @media (hover: hover) and (pointer: fine) {
         &:hover {
             background-color: #E04757;
         }
-
         &:active {
             background-color: #A21B29;
         }
     }
-
     svg {
         fill: #fff;
     }
@@ -123,17 +117,14 @@ div.hangup-button {
 
 div.hangup-menu-button {
     background-color: #CB2233;
-
     @media (hover: hover) and (pointer: fine) {
         &:hover {
             background-color: #E04757;
         }
-
         &:active {
             background-color: #A21B29;
         }
     }
-
     svg {
         fill: #fff;
     }
@@ -143,47 +134,47 @@ div.hangup-menu-button {
     align-items: center;
 }
 
+
 /**
  * START of fade in animation for main toolbar
  */
+
 .fadeIn {
     opacity: 1;
-
     @include transition(all .3s ease-in);
 }
 
 .fadeOut {
     opacity: 0;
-
     @include transition(all .3s ease-out);
 }
+
 
 /**
  * Audio and video buttons do not have toggled state.
  */
+
 .audio-preview,
 .video-preview {
     .toolbox-icon.toggled {
         background: none;
-
         &:hover {
             background: rgba(255, 255, 255, 0.2);
         }
     }
-
 }
+
 
 /**
  * On small mobile devices make the toolbar full width and pad the invite prompt.
  */
+
 .toolbox-content-mobile {
     @media (max-width: 500px) {
         margin-bottom: 0;
-
         .toolbox-content-wrapper {
             width: 100%;
         }
-
         .toolbox-content-items {
             @include ltr;
             border-radius: 0;
@@ -192,11 +183,9 @@ div.hangup-menu-button {
             padding: 8px 0;
             width: 100%;
         }
-
         .invite-more-container {
             margin: 0 16px 8px;
         }
-
         .invite-more-container.elevated {
             margin-bottom: 52px;
         }
